--- a/Data Glacier/Week4/Stroke Prediction.ipynb
+++ b/Data Glacier/Week4/Stroke Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 288,
    "id": "409160bb-ddf7-41d9-9c44-0a1ad7e8df64",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 289,
    "id": "5b1c79a7-22ab-430d-8862-1eaafd99b6d2",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 290,
    "id": "740ddcfc-c4ef-48dd-9685-96d9dda88139",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 291,
    "id": "8766aad7-ec1e-4302-802e-3cfff4dd0361",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 292,
    "id": "c001f6d6-9e17-411b-8717-47f387ca47a0",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 293,
    "id": "616bb7fa-b9f9-4037-af68-6be2f3bedfc1",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 294,
    "id": "cc7f2238-99b9-4caf-a0bc-3b571b34da12",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 269,
    "id": "d49e113f-4f05-4805-9bad-e53623ad542c",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 270,
    "id": "51e7f8c2-0351-4623-bb43-d6060e9e97aa",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 271,
    "id": "d06f9775-fda3-4a08-a7d0-3e425f491128",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "[4909 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 272,
    "id": "b460efe0-0e78-4701-801a-50123c2248ca",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 273,
    "id": "80bcfa34-84fb-4587-9e3a-452cfb0d2bf0",
    "metadata": {},
    "outputs": [],
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 274,
    "id": "5bbb9b6f-4e8e-4d52-94f7-12c9b5ea732d",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 275,
    "id": "37cbc5af",
    "metadata": {},
    "outputs": [],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 276,
    "id": "cfae09ae-1948-4e06-90dc-2ff1e31b85fd",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 277,
    "id": "e579d4f6-b9dc-4b5c-8c22-d08800180edb",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "Text(0.5, 0, 'Stroke')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 278,
    "id": "63e450a3-623a-4a93-a1c7-2927f2faafd9",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "[4908 rows x 11 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 279,
    "id": "fa4125be",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 280,
    "id": "d745555b-4ece-4cda-b852-daef445f3e1e",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 281,
    "id": "1f6a3cc2-58f7-4bdf-ac16-f54dc81a868d",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1318,7 @@
        "[4908 rows x 11 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 282,
    "id": "97fa74bc-c869-47d1-bc46-d8bebaded39d",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 283,
    "id": "c3c064c2-6321-4092-bf1a-466724aeae08",
    "metadata": {},
    "outputs": [],
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 284,
    "id": "70c31977-3f84-4f8a-bd1f-fbdf46dc4caa",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1671,7 @@
        "[982 rows x 15 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 285,
    "id": "b16d6976-ef91-4b27-9083-90e4cf0da867",
    "metadata": {},
    "outputs": [
@@ -1706,7 +1706,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall Score: 0.6792452830188679\n"
+      "Recall Score: 0.7924528301886793\n"
      ]
     }
    ],
@@ -1714,7 +1714,7 @@
     "# Correcting class imbalance\n",
     "smote = SMOTE(random_state=42)\n",
     "\n",
-    "X_train_resampled,y_train_resampled = smote.fit_resample(X_train_encoded,y_train)\n",
+    "X_train_resampled,y_train_resampled = smote.fit_resample(X_train_encoded.values,y_train)\n",
     "\n",
     "# Training random forest on the resampled data\n",
     "lr = LogisticRegression(random_state=42,max_iter=1000)\n",
@@ -1723,7 +1723,7 @@
     "lr.fit(X_train_resampled,y_train_resampled)\n",
     "\n",
     "# Predicting the data\n",
-    "prediction = lr.predict(X_test_encoded)\n",
+    "prediction = lr.predict(X_test_encoded.values)\n",
     "\n",
     "# Evaluation metrics\n",
     "print(f\"Recall Score: {recall_score(y_test,prediction)}\")"
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 286,
    "id": "2595e073-3357-49ca-b2e4-98fe9718d138",
    "metadata": {},
    "outputs": [
@@ -1757,7 +1757,7 @@
        "['lr.pkl']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 287,
    "id": "ea152238-90aa-478e-8a91-7480d072f064",
    "metadata": {},
    "outputs": [],
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0499974a-c267-4dc9-9a8b-1729b4fa4f6a",
+   "id": "807abed0",
    "metadata": {},
    "outputs": [],
    "source": []
