Modified X Train Resampled

--- a/Data Glacier/Week4/Stroke Prediction.ipynb
+++ b/Data Glacier/Week4/Stroke Prediction.ipynb
@@ -1767,7 +1767,7 @@
     "\n",
     "import joblib\n",
     "\n",
-    "joblib.dump(X_train_resampled,'X_train_resampled.pkl')\n",
+    "# joblib.dump(X_train_resampled,'X_train_resampled.pkl')\n",
     "joblib.dump(X_test_encoded,'X_test_encoded.pkl')\n",
     "joblib.dump(y_train_resampled,'y_train_resampled.pkl')\n",
     "joblib.dump(y_test,'y_test.pkl')\n",
@@ -1785,7 +1785,7 @@
     "\n",
     "code = \"\"\" \n",
     "import joblib\n",
-    "X_train_resampled = joblib.load('X_train_resampled.pkl')\n",
+    "# X_train_resampled = joblib.load('X_train_resampled.pkl')\n",
     "X_test_encoded = joblib.load('X_test_encoded.pkl')\n",
     "y_train_resampled = joblib.load('y_train_resampled.pkl')\n",
     "y_test = joblib.load('y_test.pkl')\n",
