--- a/Data Glacier/Week4/Stroke Prediction.ipynb
+++ b/Data Glacier/Week4/Stroke Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "409160bb-ddf7-41d9-9c44-0a1ad7e8df64",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "5b1c79a7-22ab-430d-8862-1eaafd99b6d2",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "id": "740ddcfc-c4ef-48dd-9685-96d9dda88139",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "8766aad7-ec1e-4302-802e-3cfff4dd0361",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "id": "c001f6d6-9e17-411b-8717-47f387ca47a0",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "id": "616bb7fa-b9f9-4037-af68-6be2f3bedfc1",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "id": "cc7f2238-99b9-4caf-a0bc-3b571b34da12",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "id": "d49e113f-4f05-4805-9bad-e53623ad542c",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "id": "51e7f8c2-0351-4623-bb43-d6060e9e97aa",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "id": "d06f9775-fda3-4a08-a7d0-3e425f491128",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "[4909 rows x 11 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "id": "b460efe0-0e78-4701-801a-50123c2248ca",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "id": "80bcfa34-84fb-4587-9e3a-452cfb0d2bf0",
    "metadata": {},
    "outputs": [],
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "id": "5bbb9b6f-4e8e-4d52-94f7-12c9b5ea732d",
    "metadata": {},
    "outputs": [
@@ -702,7 +702,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "id": "37cbc5af",
    "metadata": {},
    "outputs": [],
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "id": "cfae09ae-1948-4e06-90dc-2ff1e31b85fd",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "id": "e579d4f6-b9dc-4b5c-8c22-d08800180edb",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "Text(0.5, 0, 'Stroke')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "id": "63e450a3-623a-4a93-a1c7-2927f2faafd9",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "[4908 rows x 11 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "id": "fa4125be",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "id": "d745555b-4ece-4cda-b852-daef445f3e1e",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "id": "1f6a3cc2-58f7-4bdf-ac16-f54dc81a868d",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1318,7 @@
        "[4908 rows x 11 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "id": "97fa74bc-c869-47d1-bc46-d8bebaded39d",
    "metadata": {},
    "outputs": [],
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "id": "c3c064c2-6321-4092-bf1a-466724aeae08",
    "metadata": {},
    "outputs": [],
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "70c31977-3f84-4f8a-bd1f-fbdf46dc4caa",
    "metadata": {},
    "outputs": [
@@ -1671,7 +1671,7 @@
        "[982 rows x 15 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "id": "b16d6976-ef91-4b27-9083-90e4cf0da867",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "id": "2595e073-3357-49ca-b2e4-98fe9718d138",
    "metadata": {},
    "outputs": [
@@ -1757,7 +1757,7 @@
        "['lr.pkl']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,15 +1768,15 @@
     "import joblib\n",
     "\n",
     "# joblib.dump(X_train_resampled,'X_train_resampled.pkl')\n",
-    "joblib.dump(X_test_encoded,'X_test_encoded.pkl')\n",
-    "joblib.dump(y_train_resampled,'y_train_resampled.pkl')\n",
-    "joblib.dump(y_test,'y_test.pkl')\n",
+    "# joblib.dump(X_test_encoded,'X_test_encoded.pkl')\n",
+    "# joblib.dump(y_train_resampled,'y_train_resampled.pkl')\n",
+    "# joblib.dump(y_test,'y_test.pkl')\n",
     "joblib.dump(lr,'lr.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "id": "ea152238-90aa-478e-8a91-7480d072f064",
    "metadata": {},
    "outputs": [],
@@ -1786,9 +1786,9 @@
     "code = \"\"\" \n",
     "import joblib\n",
     "# X_train_resampled = joblib.load('X_train_resampled.pkl')\n",
-    "X_test_encoded = joblib.load('X_test_encoded.pkl')\n",
-    "y_train_resampled = joblib.load('y_train_resampled.pkl')\n",
-    "y_test = joblib.load('y_test.pkl')\n",
+    "# X_test_encoded = joblib.load('X_test_encoded.pkl')\n",
+    "# y_train_resampled = joblib.load('y_train_resampled.pkl')\n",
+    "# y_test = joblib.load('y_test.pkl')\n",
     "lr = joblib.load('lr.pkl')\n",
     "\n",
     "# Making predictions\n",
@@ -1798,6 +1798,14 @@
     "with open (\"model.py\",'w') as f:\n",
     "    f.write(code)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32ea1629",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
